# cozyharbour

./: README.md  vibrations.py  vibrations_alpha3.py
AppLead/AppCampgns/: APPS11_upd7.py  APPS_UPD_FILTERING3.py  APPS_UPD_FILTERING_INCLUDED.py  APPS_UPD_FILTERING_SUBMITTED.py  dependencies.txt  parameters.txt  readme
AppLead/AppLeadTest/: dependencies.txt  parameters.txt  readme  test_train_generation_APP.py  test_train_generation_LEADS.py  testingAPPS.py  testingLEADS.py
AppLead/Filtering&Stuff/: APPS_UPD_FILTERING3.py  APPS_UPD_FILTERING_INCLUDED.py  APPS_UPD_FILTERING_SUBMITTED.py  dependencies.txt  readme
AppLead/Leads/: LEADS.py  (+3 more)
FinMrkt/: CatBoostFut252_Vol_func.ipynb  FinMrktAlloc4.ipynb
Stochastics/: 2345three bunches.xlsx  Farthest_output.xlsx  Untitled.ipynb  Untitled1.py  default5.txt  farthest_pairs.txt  finMerged.xlsx  finUnmerged.xlsx  graph.xlsx  graph_1.xlsx  log_ui4.py  merging.py  o_log.xlsx  output.txt  output1.txt  output_ns.txt  params.txt  processed_2345three bunches.xlsx  processed_finMerged.xlsx  processed_finUnmerged.xlsx  processed_merged_2345three bunches.xlsx  processed_merged_finUnMerged.xlsx  vor_features_14_04.py  voronoi_clust8.py  window1.txt
TreeMD/: CMakeLists.txt  NPTest.ipynb  Untitled.ipynb  core.cp313-win_amd64.pyd  core.cpp  energytest.py  nptest.cp313-win_amd64.pyd  nptest.cpp  nptest.py  setup.py  viewer.py  viewer2.py
TreeMD/.ipynb_checkpoints/: core-checkpoint.cpp  viewer-checkpoint.py
TreeMD/dump/: core1.txt
Vibrations/: params.xlsx  testdata.xlsx  vibrations.py  vibrations_beta.py  vibrations_semifinal.py
(+35 files in other folders)
